# AstralConnect-Teste-34

./: .replit  cookies.txt  package-lock.json  package.json  pyproject.toml  replit.md  test_openai.js
attached_assets/: Pasted--Integra-o-do-Mapa-Astral-com-a-Plataforma-Replit-Deployment-Nossa-rede-social-voltada-exclus-1752541683099_1752541683099.txt  Pasted--Integra-o-do-Mapa-Astral-com-a-Plataforma-Replit-Deployment-Nosso-sistema-utiliza-uma-API-ava-1752541435828_1752541435828.txt  api_mapa_astral (1)_1752541420571.py  api_mapa_astral_completo (1)_1752539825266.py  🌌 Integração do Mapa Astral com a Plataforma (1)_1752541633166.docx
client/: index.html
client/src/: App.tsx  index.css  main.tsx
client/src/components/: AppWrapper.tsx  ChatPopup.tsx  CommentsModal.tsx  CommentsModal.tsx.backup  MediaExpansionModal.tsx  PostInteractions.tsx  astral-countdown.tsx  astral-map-card.tsx  astral-map-modal-enhanced.tsx  astral-map-modal.tsx  constellation-background.tsx  glass-card.tsx  horoscope-card.tsx  post-card.tsx  star-field.tsx  user-profile-card.tsx
scripts/: bulk-insert.sh  execute-remaining-batches.sh  final-insert.js  insert-all-batches.sh  insert-chunks.sh  insert-direct.js  mass-insert.js  populate-all-cities.js  populate-all-municipalities.js  populate-municipalities.js  populate_municipalities.py
server/: astralCalculator.ts  astralService.ts  astral_api.py  astral_api_advanced.py  db.ts  horoscopeService.ts  index.ts  openaiService.ts  populateLocations.ts  replitAuth.ts  routes.ts  simpleAuth.ts  storage.ts
shared/: schema.ts
(+11 files in other folders)
